# zepto-cli

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: demo.sh
tests/: test_core.py
zepto_cli/: __init__.py  base.py  blinkit.py  bot.py  cli.py  zepto.py
