[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zepto-cli"
version = "0.2.0"
description = "🥬 Your AI agent's grocery arm — order Zepto or Blinkit from terminal or agent (India only)"
readme = "README.md"
authors = [
    { name = "Rishi" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
]
keywords = ["zepto", "blinkit", "grocery", "delivery", "cli", "agent", "india", "hermes", "openclaw", "quick-commerce"]

[project.urls]
Homepage = "https://github.com/LoneTraderRishi/zepto-cli"
Repository = "https://github.com/LoneTraderRishi/zepto-cli"
Documentation = "https://github.com/LoneTraderRishi/zepto-cli#readme"

[project.scripts]
zepto = "zepto_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
